# firmware-smart-socket

./: CMakeLists.txt  Kconfig  partitions.csv  sdkconfig  sdkconfig.old  test.c
main/: CMakeLists.txt  main.c
main/ac-measure/: unit_acmeasure.c  unit_acmeasure.h
main/config/: config.c  config.h
main/device/: device.c  device.h
main/http-client/: http_client.c  http_client.h
main/mqtt/: mqtt.c  mqtt.h
main/ntp/: ntp_time.c  ntp_time.h
main/nvs/: nvs.c  nvs.h
main/smartconfig/: smart_config.c  smart_config.h
main/task-manager/: task_manager.c  task_manager.h
main/task/ac-measure/: ac_measure_task.c  ac_measure_task.h
main/task/button/: button_task.c  button_task.h
main/task/led/: led_task.c  led_task.h
main/task/schedule/: schedule.c  schedule.h
main/web-server/: web_server.c  web_server.h
main/web-socket/: web_socket.c  web_socket.h
main/wifi/: wifi.c  wifi.h
