idf_component_register(SRCS "main.c" 
                            "device/device.c"
                            "task/button/button_task.c"
                            "smartconfig/smart_config.c"
                            "nvs/nvs.c"
                            "ntp/ntp_time.c"
                            "mqtt/mqtt.c"
                            "wifi/wifi.c"
                            "config/config.c"
                            "web-socket/web_socket.c"
                            "web-server/web_server.c"
                            "task-manager/task_manager.c"
                            "task/schedule/schedule.c"
                            "http-client/http_client.c"
                            "task/ac-measure/ac_measure_task.c"
                            "ac-measure/unit_acmeasure.c"
                       INCLUDE_DIRS "."
           )
